@@ -1,5 +1,11 @@
 2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Factorize rules using build-aux.
+	* Makefile.am: Use factorized rules..
+	* build-aux: Synchronize.
+
+2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Move common.hh to shared-tests submodule.
 	* .gitmodules: Register submodule.
 	* tests/Makefile.am: Fix common.hh path and add
